--- a/regression-calculator.csproj
+++ b/regression-calculator.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>metode_numeris</RootNamespace>
+    <RootNamespace>regression_calculator</RootNamespace>
   </PropertyGroup>
 
 </Project>
